generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ==================== ENUMS ====================

enum Role {
  CITIZEN
  LGU_ADMIN
  FIELD_WORKER
}

enum ReportStatus {
  PENDING
  VERIFIED
  CLEANUP_SCHEDULED
  IN_PROGRESS
  CLEANED
  REJECTED
}

enum WasteCategory {
  with_waste
  no_waste
}

enum ImageType {
  REPORT
  CLEANUP
}

enum NotificationType {
  NEW_REPORT
  STATUS_CHANGE
  ASSIGNMENT
  SYSTEM
}

enum WasteType {
  PLASTIC
  ORGANIC
  GLASS
  METAL
  PAPER
}

enum AnalysisStatus {
  DIRTY
  CLEAN
}

// ==================== MODELS ====================

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  firstName String
  lastName  String
  phone     String?
  role      Role     @default(CITIZEN)
  avatarUrl String?
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Reports submitted by the user
  reports         Report[]        @relation("ReporterReports")
  // Reports assigned to the user (field worker)
  assignedReports Report[]        @relation("AssignedReports")
  // Status changes made by the user
  statusChanges   StatusHistory[]
  // Notifications for the user
  notifications   Notification[]
  // Activity logs
  // Activity logs
  // (ActivityLog model removed)
  // AI-assisted waste detections
  // (WasteReport model removed)
  // Reporting zones created by admin
  reportingZones  ReportingZone[]

  @@index([role])
  @@index([role, isActive])
  @@index([email])
}

model Report {
  id          String        @id @default(uuid())
  title       String
  description String
  category    WasteCategory
  status      ReportStatus  @default(PENDING)
  latitude    Float
  longitude   Float
  address     String?
  isAnonymous Boolean       @default(false)
  isDeleted   Boolean       @default(false)
  isSpam      Boolean       @default(false)
  spamMarkedAt DateTime?
  spamReason  String?
  analysisStatus AnalysisStatus?
  analysisWasteCount Int?
  analysisConfidence Float?
  analyzedAt DateTime?
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  // Reporter (nullable for anonymous)
  reporterId String?
  reporter   User?   @relation("ReporterReports", fields: [reporterId], references: [id])

  // Assigned field worker
  assignedToId String?
  assignedTo   User?   @relation("AssignedReports", fields: [assignedToId], references: [id])

  // Related records
  images        ReportImage[]
  statusHistory StatusHistory[]
  notifications Notification[]

  @@index([status])
  @@index([category])
  @@index([createdAt])
  @@index([reporterId])
  @@index([assignedToId])
  @@index([latitude, longitude])
  @@index([isDeleted, createdAt])
  @@index([isDeleted, status, createdAt])
  @@index([isDeleted, category, createdAt])
  @@index([isDeleted, reporterId, createdAt])
  @@index([isDeleted, assignedToId, createdAt])
  @@index([isDeleted, isSpam, createdAt])
  @@index([isDeleted, isSpam, spamMarkedAt])
}

model ReportImage {
  id        String    @id @default(uuid())
  imageUrl  String
  publicId  String    // Cloudinary public ID
  type      ImageType @default(REPORT)
  createdAt DateTime  @default(now())

  reportId String
  report   Report @relation(fields: [reportId], references: [id], onDelete: Cascade)

  @@index([reportId])
}

model StatusHistory {
  id             String       @id @default(uuid())
  previousStatus ReportStatus?
  newStatus      ReportStatus
  notes          String?
  createdAt      DateTime     @default(now())

  reportId String
  report   Report @relation(fields: [reportId], references: [id], onDelete: Cascade)

  changedById String
  changedBy   User   @relation(fields: [changedById], references: [id])

  @@index([reportId])
  @@index([createdAt])
}

model Notification {
  id        String           @id @default(uuid())
  title     String
  message   String
  type      NotificationType
  isRead    Boolean          @default(false)
  createdAt DateTime         @default(now())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  reportId String?
  report   Report? @relation(fields: [reportId], references: [id], onDelete: SetNull)

  @@index([userId, isRead])
  @@index([userId, createdAt])
  @@index([createdAt])
}

// ActivityLog and WasteReport models removed via migration.

model ReportingZone {
  id          String   @id @default(uuid())
  name        String
  // GeoJSON-style ring: array of {lat, lng} objects
  coordinates Json
  isActive    Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  createdById String
  createdBy   User   @relation(fields: [createdById], references: [id])

  @@index([isActive])
  @@index([createdById])
}